notes-kubernetes/sample/ConfigMap-data-sample.yaml

apiVersion: v1
kind: Pod
metadata:
  name: configmap-demo-pod
spec:
  containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
      # 定义环境变量
      volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
  # 定义配置卷
  volumes:
    - name: config
      configMap:
        name: game-demo # ConfigMap 卷命令
        items: # ConfigMap的一组键，与容器文件名的映射
          - key: "game.properties"
            path: "game.properties"
          - key: "user-interface.properties"
            path: "user-interface.properties"
