notes-kubernetes/sample/Pod-liveness-sample.yml
# 存活探针检测，tcp检测
apiVersion: v1
kind: Pod
metadata:
  name: liveness-exec-pod
  namespace: default
  labels:
    app: liveness-exec-pod
spec:
  containers:
    - name: liveness-exec-container
      image: nginx:1.21.1
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
      livenessProbe:
        initialDelaySeconds: 1
        periodSeconds: 3
        tcpSocket:
          port: 80
  restartPolicy: Always
