notes-kubernetes/sample/Secret-use-env-sample.yaml
apiVersion: v1

# 以环境变量方式导入secret到Pod
kind: Pod
metadata:
  name: use-secret-env
spec:
  containers:
    - name: use-secret-env
      imagePullPolicy: IfNotPresent
      image: nginx
