notes-kubernetes/sample/Secret-use-volume-sample.yaml
apiVersion: v1

# 以volume方式挂载secret到Pod
kind: Pod
metadata:
  name: use-secret-volume
spec:
  containers:
    - name: use-secret-env
      imagePullPolicy: IfNotPresent
      image: nginx
      volumeMounts:
        - name: "foo"
          mountPath: "/etc/foo" # 挂载完毕后，会在此目录下看到两个名称为username和password的文件，文件内容就是具体的secret的值
          readOnly: true
  volumes:
    - name: foo
      secret:
        secretName: mysecret
