notes-kubernetes/sample/Pod-InitC-sample.yaml
# Pod 初始化容器
apiVersion: v1
kind: Pod
metadata:
  name: tomcat-initc
  labels:
    app: tomcat-initc
spec:
  volumes:
    - name: tomcat-initc-volume
      emptyDir: {}
  containers:
    - name: tomcat-initc
      image: tomcat
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - mountPath: /usr/local/tomcat/webapps/
          name: tomcat-initc-volume
  restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: tomcat-initc-svc
spec:
  selector:
    app: tomcat-initc
  ports:
    - port: 8080
  type: NodePort
